Update Jabel for PKware usage
Change Jabel project group from  "com.github.bsideup.jabel" to "com.pkware.jabel"

Update settings.gradle and all project build.gradle files to kotlin and use .kts extensions

Remove original Jabel publishing workflow and add PKware third party publishing workflow

Add project versioning in addition to tags

Add gradle.properties file

Update README.md for kotlin and add PKware third party release/publish instructions

Set initial version to 1.0.2-PKWARE-SNAPSHOT